tests/fail/no-inline-imports.tsx
// All of these should trigger errors.

async function loadModule() {
  const m = await import("./lazy-module");
  return m;
}

const loader = async () => {
  const m = await import("./other-module");
  return m;
};

function setup() {
  const pkg = require("some-package");
  return pkg;
}
